spacing issue on add cycle page

--- a/ui/sass/screen.sass
+++ b/ui/sass/screen.sass
@@ -911,6 +911,7 @@ a.create
   
   .list
     clear: both
+    margin-bottom: 0
   
   .addrun
     padding: 0
